--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,8 @@
 
 body {
     font-family: 'Neulis-Medium', sans-serif;
+    background: url('/imgs/Website-Background-1.jpg');
+    background: url('./imgs/Website-Background-1.jpg');
     background: url('../imgs/Website-Background-1.jpg');
     background-size: cover;
     background-position: center;
