--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
     --pV2: #260071;
     --white: #F5F5F6;
     --bs-primary-rgb: 41,34,255 !important;
+    --bs-secondary-rgb: 255,66,34 !important;
 }
 
 @font-face {
@@ -30,4 +31,8 @@ body {
     background-attachment: fixed;
     background-repeat: no-repeat;
     color: var(--pV1);
+}
+
+.footer-bg--city {
+    background-color: #303030 ;
 }
